@startuml
class Vehiculos.Vehiculo {
- String marca
- double kilometraje
- String patente
- String color
~ <<Create>> Vehiculo()
~ <<Create>> Vehiculo(String)
~ <<Create>> Vehiculo(String,double)
~ <<Create>> Vehiculo(String,double,String)
~ <<Create>> Vehiculo(String,double,String,String)
+ String getMarca()
+ void setMarca(String)
+ double getKilometraje()
+ void setKilometraje(double)
+ String getColor()
+ void setColor(String)
+ String getPatente()
+ void setPatente(String)
}
class Vehiculos.Moto {
- String cilindrada
- int cantRuedas
~ <<Create>> Moto()
~ <<Create>> Moto(String)
~ <<Create>> Moto(String,int)
+ String getCilindrada()
+ void setCilindrada(String)
+ int getCantRuedas()
+ void setCantRuedas(int)
}
class Vehiculos.Coche {
- int cantPuertas
- int cantRuedas
~ <<Create>> Coche()
~ <<Create>> Coche(int)
~ <<Create>> Coche(int,int)
+ int getCantPuertas()
+ void setCantPuertas(int)
+ int getCantRuedas()
+ void setCantRuedas(int)
}
class Vehiculos.Main {
+ {static} void main(String[])
}


Vehiculos.Vehiculo <|-- Vehiculos.Moto
Vehiculos.Vehiculo <|-- Vehiculos.Coche
@enduml